tests/invalid/Lambda_Invalid_7.whiley
function f(void x) -> int:
    return 1
